Create swagger/paths/contacts/post.yaml and swagger/paths/contacts/get.yaml

--- a/swagger/components/schemas/contact.yaml
+++ b/swagger/components/schemas/contact.yaml
@@ -1,12 +1,12 @@
 type: object
 required:
-  - _id
+  # - _id
   - name
   - phoneNumber
   - contactType
-  - userId
-  - createdAt
-  - updatedAt
+  # - userId
+  # - createdAt
+  # - updatedAt
 properties:
   _id:
     description: "Contact's id"
